# trademirror-v4p

./: .gitignore  README.md
bsc-monitor/: README.md  Settings.toml
bsc-monitor/src/: abi.json  main.rs  methodDirectory.json
bsc-rust/: .gitignore  Cargo.toml
bsc-rust/src/: assetindex.rs
trademirror-v4/: README.md  bun.lockb  index.ts  package.json  tsconfig.json
trademirror-v4/components/: IPC-testing-getSymbolV2.ts  convertNumbers.ts  decodeTx.ts  decodeTxV2.ts  getPrice.ts  getRedisAssetIndex.ts  getSymbol.ts  logo.ts
trademirror-v4/components/trade/: saveToRedis.ts  startTrade.ts  startTransaction.ts  trader-stats.json
trademirror-v4/components/trade/postTrade/: decodeLogs.ts  getPosition.ts  updateTp.ts  updateTpAndSl.ts
trademirror-v4/components/utils/: calculateQty.ts  calculateTp.ts  convertNumbers.ts  convertToWei.ts  functionAbis.ts  interfaces.ts
