[package]
name = "bsc_monitor"
version = "0.1.0"
edition = "2021"
authors = ["prxo <admin@prxo.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
web3 = "0.19.0"
redis = { version = "0.25.4", features = ["aio", "tokio-comp", "json"] }
config = "0.14.0"
ethabi = "18.0.0"
serde_json = "1.0.64"
hex = "0.4.3"

tokio-tungstenite = "0.23.0"
futures-util = "0.3"
